feat(shoppingcart): implement functionality to delete entire cart row
